test/Harper/Tests/Bad/issue3_invPred.har
f n = {
  if 1 {
    return n;
  }
  return 0;
};

main = f 42;